kubernetes/consumer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer
  labels:
    app.kubernetes.io/name: consumer
spec:
  selector:
    app.kubernetes.io/name: consumer
  ports:
    - name: metrics
      port: 9101
      targetPort: metrics
